namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-demo
  labels:
    pod-security.kubernetes.io/enforce: "restricted"
