networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-api
  namespace: app-demo
spec:
  podSelector: {matchLabels: {app: mysql}}
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector: {matchLabels: {app: api}}
      ports:
        - protocol: TCP
          port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-allow-web
  namespace: app-demo
spec:
  podSelector: {matchLabels: {app: api}}
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector: {matchLabels: {app: web}}
      ports:
        - protocol: TCP
          port: 8080
